fix button alignment

--- a/static/css/biomedical/protein.scss
+++ b/static/css/biomedical/protein.scss
@@ -38,7 +38,7 @@
 }
 
 .ppi-input {
-  width: 30%;
+  width: 70px;
 }
 
 .ppi-input:focus {
